[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemies/goomba.png" type="Texture" id=1]
[ext_resource path="res://scripts/Goomba.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0357

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.5, 8.5 )

[node name="Goomba" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 2049
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.76837e-07, 4.76837e-07 )
scale = Vector2( 0.76895, 0.796089 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4 )
shape = SubResource( 1 )

[node name="KillArea" type="Area2D" parent="."]
position = Vector2( 0, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
position = Vector2( 0, 7 )
shape = SubResource( 2 )

[node name="DieArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="DieArea"]
position = Vector2( -0.5, -3.5 )
shape = SubResource( 3 )

[node name="WalkTimer" type="Timer" parent="."]

[connection signal="body_entered" from="KillArea" to="." method="_on_KillArea_body_entered"]
[connection signal="area_entered" from="DieArea" to="." method="_on_DieArea_area_entered"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
